--- a/scss/app.scss
+++ b/scss/app.scss
@@ -5,7 +5,7 @@
  */
 
 // Colors.
-$positive: #387ef5;
+$positive: #91AA2D;
 
 // Setting the default button to button-outline.
 $button-default-bg: transparent;
